# 43_AlpatovaV_parallelism

task_1/: CMakeLists.txt  README.md  task1.cpp
task_2/task2_1/: 1.c  CMakeLists.txt  README.md  results_1.csv
task_2/task2_2/: 2.c  CMakeLists.txt  README.md  results_2.csv
task_2/task2_3/: 3  3.cpp  CMakeLists.txt  README.md  results_3.txt
task_3/task3_1/: 1.cpp  CMakeLists.txt  README.md  result.txt  test.out
task_3/task3_2/: 2.cpp  CMakeLists.txt  c1_sin.txt  c2_sqrt.txt  c3_pow.txt  task2.out
task_4/: 4.py
